# ErpnextWooCommerceCenter

./: CHANGELOG.md  README.md  pyproject.toml
woocommerce_center/: exceptions.py  hooks.py  install.py  patches.txt  utils.py  woocommerce_endpoint.py
woocommerce_center/config/: __init__.py  desktop.py  docs.py
woocommerce_center/overrides/: __init__.py
woocommerce_center/overrides/selling/: __init__.py  sales_order.py
woocommerce_center/patches/: __init__.py
woocommerce_center/patches/v1/: __init__.py  migrate_from_legacy_apps.py
woocommerce_center/tasks/: __init__.py  stock_update.py  sync.py  sync_item_prices.py  sync_items.py  sync_sales_orders.py  utils.py
woocommerce_center/translations/: de.csv
woocommerce_center/woocommerce/: woocommerce_api.py
woocommerce_fusion/: .cookiecutter_version  .gitignore  .pre-commit-config.yaml  README.md  cypress.config.js  package.json  prepare_help_files.sh  pyproject.toml
woocommerce_fusion/cypress/integration/: todo.js
woocommerce_fusion/cypress/plugins/: index.js
woocommerce_fusion/cypress/support/: commands.js  e2e.js
woocommerce_fusion/docs/: woocommerce_fusion_introduction.md  woocommerce_fusion_item-prices.md  woocommerce_fusion_item-stock-levels.md  woocommerce_fusion_items.md  woocommerce_fusion_sales-order.md
woocommerce_fusion/woocommerce_fusion/: .gitignore  hooks.py  woocommerce_endpoint.py
woocommerce_integration/: .pre-commit-config.yaml  README.md
woocommerce_integration/woocommerce_integration/: general_utils.py  hooks.py  order_creation_utils.py  patches.txt  woocommerce_connector.py
(+81 files in other folders)
