[project]
name = "woocommerce_center"
authors = [
    { name = "CodeProMax Tech", email = "codepromaxtech@gmail.com" }
]
description = "WooCommerce Center — All-in-one WooCommerce ↔ ERPNext connector (orders, products, stock, prices, payments, webhooks, multi-site)"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]
dependencies = [
    "woocommerce~=3.0.0",
    "jsonpath-ng~=1.7.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
hypothesis = "~=6.31.0"
parameterized = "~=0.9.0"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
    "B017", "B018", "B023", "B904",
    "E101", "E402", "E501", "E741",
    "F401", "F403", "F405", "F722",
    "W191",
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true
